force-app/main/default/objects/Hooning__c/Hooning__c.object-meta.xml
<CustomObject>
    <description>This is TheAudiArmy Custom Object to house the Show, Race, Road Course, and Drag Strip records and various Page Layouts.</description>
    <label>Hooning</label>
    <nameField>
        <label>Hooning At</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Hoonings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>