force-app/main/default/objects/Hooning__c/fields/Direction__c.field-meta.xml
<CustomField>
    <fullName>Direction__c</fullName>
    <description>This field is for designating which direction #TheAudiArmy will be traveling in this Hooning.</description>
    <inlineHelpText>Please select which Direction #TheAudiArmy will be traveling for this Hooning.</inlineHelpText>
    <label>Direction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Clockwise</fullName>
            </value>
            <value>
                <fullName>Counter Clockwise</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>