force-app/main/default/objects/Hooning__c/fields/Driver__c.field-meta.xml
<CustomField>
    <fullName>Driver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field relates #TheAudiArmy Hooning Race and Show Records to the Contact Driver Records</description>
    <inlineHelpText>Please enter #TheAudiArmy Driver who will be Hooning at this event.</inlineHelpText>
    <label>Driver</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Hoonings</relationshipLabel>
    <relationshipName>Hoonings</relationshipName>
    <type>Lookup</type>
</CustomField>