force-app/main/default/objects/Hooning__c/fields/Event_Date__c.field-meta.xml
<CustomField>
    <fullName>Event_Date__c</fullName>
    <description>This field is for entering when #TheAudiArmy should be at this Hooning.</description>
    <inlineHelpText>Please select the Date and Time of this Hooning.</inlineHelpText>
    <label>Event Date</label>
    <type>DateTime</type>
</CustomField>