force-app/main/default/objects/Hooning__c/fields/Laps__c.field-meta.xml
<CustomField>
    <fullName>Laps__c</fullName>
    <description>This field is for designating how many Laps #TheAudiArmy traverse.</description>
    <inlineHelpText>Please enter how many Laps #TheAudiArmy traverse.</inlineHelpText>
    <label>Laps</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>