force-app/main/default/objects/Hooning__c/fields/Length__c.field-meta.xml
<CustomField>
    <fullName>Length__c</fullName>
    <description>This field is for designating the course length #TheAudiArmy will be traveling per lap at this Hooning.</description>
    <inlineHelpText>Please enter how many miles this track is for Hooning.</inlineHelpText>
    <label>Track Length</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>