force-app/main/default/objects/Hooning__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>This field is for designating the location that #TheAudiArmy will be Hooning</description>
    <inlineHelpText>Please enter where this Hooning will take place.</inlineHelpText>
    <label>Location</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>