force-app/main/default/objects/Hooning__c/fields/Payout__c.field-meta.xml
<CustomField>
    <fullName>Payout__c</fullName>
    <description>This field is for showing how much money #TheAudiArmy can win from this Hooning.</description>
    <inlineHelpText>Please enter the amount #TheAudiArmy could win from this Hooning.</inlineHelpText>
    <label>Payout</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>