force-app/main/default/objects/Hooning__c/fields/Payouts__c.field-meta.xml
<CustomField>
    <fullName>Payouts__c</fullName>
    <description>This field is for showing how much money #TheAudiArmy can win from this Hooning.</description>
    <inlineHelpText>Please enter the amount #TheAudiArmy can earn at this hooning.</inlineHelpText>
    <label>Payouts</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>