force-app/main/default/objects/Hooning__c/fields/Place__c.field-meta.xml
<CustomField>
    <fullName>Place__c</fullName>
    <description>This field is for designating #TheAudiArmy Place in the Hooning.</description>
    <inlineHelpText>Please enter the place #TheAudiArmy finished in the Hooning.</inlineHelpText>
    <label>Place</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>