force-app/main/default/objects/Hooning__c/fields/Race_Type__c.field-meta.xml
<CustomField>
    <fullName>Race_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field relates #TheAudiArmy Hooning Drag Strip and Road Course Records to the Hooning Race Records.</description>
    <inlineHelpText>Please enter #TheAudiArmy Race Type the Hooning will be happening at.</inlineHelpText>
    <label>Race Type</label>
    <referenceTo>Hooning__c</referenceTo>
    <relationshipLabel>Hoonings</relationshipLabel>
    <relationshipName>Hoonings</relationshipName>
    <type>Lookup</type>
</CustomField>