force-app/main/default/objects/Hooning__c/recordTypes/Drag_Strip.recordType-meta.xml
<RecordType>
    <fullName>Drag_Strip</fullName>
    <active>true</active>
    <description>Choose this Record Type when creating a Drag Strip Hooning Record for #TheAudiArmy</description>
    <label>Drag Strip</label>
</RecordType>