force-app/main/default/objects/Hooning__c/recordTypes/Race.recordType-meta.xml
<RecordType>
    <fullName>Race</fullName>
    <active>true</active>
    <description>Choose this Record Type when creating a Race Hooning Record for #TheAudiArmy</description>
    <label>Race</label>
</RecordType>