force-app/main/default/objects/Hooning__c/recordTypes/Road_Course.recordType-meta.xml
<RecordType>
    <fullName>Road_Course</fullName>
    <active>true</active>
    <description>Choose this Record Type when creating a Road Course Hooning Record for #TheAudiArmy</description>
    <label>Road Course</label>
</RecordType>