force-app/main/default/objects/Hooning__c/recordTypes/Show.recordType-meta.xml
<RecordType>
    <fullName>Show</fullName>
    <active>true</active>
    <description>Choose this Record Type when creating a Show Hooning Record for #TheAudiArmy</description>
    <label>Show</label>
</RecordType>